feat: add gemini provider

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 # API Keys for LLM providers
 OPENAI_API_KEY=your_openai_api_key_here
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
+GOOGLE_API_KEY=your_google_api_key_here
 
 # Default settings
 DEFAULT_MODEL_PROVIDER=openai
-DEFAULT_MODEL=gpt-4
+DEFAULT_MODEL=gpt-4o
 
 # Optional: Path to local models if using local execution
 # LOCAL_MODEL_PATH=/path/to/local/model
