--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ rich>=13.3.5
 # LLM integration
 openai>=1.1.0
 anthropic>=0.5.0
+google-generativeai>=0.3.0
 
 # Optional local model support
 # ollama>=0.1.0
